@@ -1,8 +1,7 @@
 SUBDIRS = gen lib stat
 
 # what flags you want to pass to the C compiler & linker
-AM_CFLAGS = -Wall -I$(srcdir)/{gen,lib,stat}/ -I.
-AM_LDFLAGS = -lm
+AM_CFLAGS = -I$(srcdir) -I$(srcdir)/gen -I$(srcdir)/lib -I$(srcdir)/stat
 
 bin_PROGRAMS = httperf idleconn
 httperf_SOURCES = httperf.c httperf.h object.c object.h call.c call.h conn.c \
