@@ -1,5 +1,5 @@
 # what flags you want to pass to the C compiler & linker
-AM_CFLAGS = -Wall -O2 -I$(srcdir)/../ -I$(srcdir)/../../ -I.. -I$(srcdir)
+AM_CFLAGS = -I$(srcdir)/..
 AM_LDFLAGS =
 
 noinst_LIBRARIES = libgen.a
