@@ -61,9 +61,7 @@
 
 #include <ctype.h>
 #include <errno.h>
-#ifdef HAVE_GETOPT_H
-  #include <getopt.h>
-#endif  
+#include <getopt.h>
 #include <signal.h>
 #include <stdarg.h>
 #include <stdio.h>
