@@ -1,7 +1,6 @@
 # what flags you want to pass to the C compiler & linker
-AM_CFLAGS = -Wall -O2 -I$(srcdir)/../ -I$(srcdir)/../../
 AM_LDFLAGS =
 
 noinst_LIBRARIES = libutil.a
-libutil_a_SOURCES = ssl_writev.c
+libutil_a_SOURCES = getopt.c getopt.h getopt1.c ssl_writev.c
 
