@@ -1,6 +1,5 @@
 # what flags you want to pass to the C compiler & linker
-AM_CFLAGS = -Wall -O2 -I$(srcdir)/../ -I$(srcdir)/../gen/ -I$(srcdir)/../../
-AM_LDFLAGS =
+AM_CFLAGS = -I$(srcdir)/.. -I$(srcdir)/../gen
 
 noinst_LIBRARIES = libstat.a
 libstat_a_SOURCES = basic.c sess_stat.c print_reply.c stats.h
